--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ aiofiles==23.1.0
 aiogram @ https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip
 aiohttp==3.8.4
 aiosignal==1.3.1
+alembic==1.11.1
 async-timeout==4.0.2
 attrs==22.2.0
 cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
+flake8==6.0.0
 frozenlist==1.3.3
 google-api-core==2.11.0
 google-api-python-client==2.80.0
@@ -15,16 +17,22 @@ google-auth-httplib2==0.1.0
 google-auth-oauthlib==1.0.0
 googleapis-common-protos==1.58.0
 greenlet==2.0.2
+gspread==5.9.0
 httplib2==0.21.0
 idna==3.4
 magic-filter==1.0.9
+Mako==1.2.4
+MarkupSafe==2.1.2
+mccabe==0.7.0
 multidict==6.0.4
 oauth2client==4.1.3
 oauthlib==3.2.2
 protobuf==4.22.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.10.0
 pydantic==1.10.5
+pyflakes==3.0.1
 pyparsing==3.0.9
 python-dotenv==1.0.0
 requests==2.28.2
